--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "Project by Node-Express generator",
   "anthor": "Harry Zhu <harryzhux@gmail.com> (http://github.com/harryzhux)",
+  "license": "MIT",
+  "repository": "https://github.com/harryzhux/DBData-PostgresNodeJS",
   "scripts": {
     "start": "node ./bin/www"
   },
